--- a/resume.css
+++ b/resume.css
@@ -1,111 +1,111 @@
+/* colour scheme selected by following https://tallys.github.io/color-theory/ */
 body {
-  font-family: /*AndaleMono, "Andale Mono", Andale Mono,*/ Verdana, sans-serif;
+  font-family: Verdana, sans-serif;
   margin-left: 2.5in;
   margin-right: 2.5in;
   opacity: 1;
-}
+  background-color: #fffaff; }
+
+* {
+  list-style: none; }
+
+h3 {
+  font-weight: 125; }
 
 #header_container {
-  text-align: center;
-}
+  text-align: center; }
 
 #header_container > .name {
-  margin-bottom: 3px;
-  margin-top: 9px;
-  font-size: 2.5em;
-}
+  margin-bottom: 1px;
+  margin-top: 6px;
+  font-size: 2.5em; }
 
 #header_container > .name > span {
   padding-left: 7px;
-  padding-right: 7px;
-}
+  padding-right: 7px; }
 
 #header_container > .name .given {
-  color: #807080;
-  border-right: solid 1px black;
-}
+  color: #001a00;
+  border-right: solid 1px #001a00; }
 
 #header_container .name .family {
-  color: #070707;
-}
+  color: #001a00; }
 
 #header_container .contact_details {
   font-size: 1.1em;
-  padding-bottom: 7px;
-}
+  padding-bottom: 7px; }
 
 #header_container .contact_details span {
   padding-left: 9px;
-  padding-right: 9px;
-}
+  padding-right: 9px; }
 
 .resume-section {
-  padding-bottom: 8px;
-}
+  padding-bottom: 8px; }
 
 .resume-section > *:nth-child(1) {
   font-size: 1.50em;
-  margin-top: 0;
-  margin-bottom: 5px;
-  padding-left: 5px;
-  padding-bottom: 2px;
-  border-bottom: solid 4px #905050;
-  border-left: solid 1em #905050;
-  column-count: 2;
-}
+  margin: 0;
+  padding: 0;
+  margin-bottom: 3px;
+  border-bottom: solid 4px #46608b;
+  column-count: 2; }
 
-.resume-section > *:nth-child(1n+2) * /*, .resume-section .itemize > div */ {
+.sectionIcon {
+  color: #e39b1c;
+  background-color: #46608b;
+  line-height: 100%;
+  height: 1.25em;
+  width: 1.25em;
+  padding: 5px;
+  padding-bottom: 0;
+  vertical-align: middle;
+  text-align: center;
+  border: 2px solid #46608b; }
+
+.resume-section > *:nth-child(1n+2) * {
   margin-top: 1px;
-  margin-bottom: 1px;
-  margin-left: 0px;
-}
+  margin-bottom: 3px;
+  margin-left: 0px; }
+  .resume-section > *:nth-child(1n+2) * * {
+    margin-bottom: 1px; }
 
 .itemize > div {
-  padding-bottom: 7px;
-}
+  padding-bottom: 7px; }
 
 .itemize > div > div:nth-child(1) {
   font-size: 1.2em;
   font-weight: bold;
   /*display: flex;
   flex-wrap: wrap;*/
-  vertical-align: middle;
-}
+  vertical-align: middle; }
 
 .itemize > div > div:nth-child(1) > *:nth-child(1) {
-  margin-right: 0.2in;
-}
+  margin-right: 0.2in; }
 
 .itemize > div > ul {
-  padding-left: 3px;
-  list-style: square;
-}
+  padding-left: 0; }
 
 .itemize > div > ul > li *:first-child {
-  font-size: 1.025em;
-}
+  font-size: 1.025em; }
 
 .itemize > div table {
-  border-collapse: collapse;
-}
+  border-collapse: collapse; }
 
 .itemize div table th {
   text-align: left;
   font-size: 1.125em;
   vertical-align: middle;
   padding: 1px;
-  padding-right: 5px;
-}
+  padding-right: 5px; }
 
 .itemize div table td {
   text-align: right;
   vertical-align: middle;
-  padding: 1px;
-}
+  padding: 1px; }
 
 .itemize > div > *:nth-last-child(1) {
-  margin-left: 17px;
-}
+  margin-left: 0;
+  margin-bottom: 2px; }
 
 .itemize > div > div:nth-child(1) > .description {
   font-weight: lighter;
@@ -113,17 +113,20 @@ body {
   font-size: 0.7em;
   color: #4D4D4D;
   margin-right: auto;
-  display: inline;
-}
+  display: inline; }
 
 .itemize > div > div:nth-child(1) > .tools {
   font-weight: lighter;
   font-style: bold;
   font-size: 0.7em;
   color: #4D4D4D;
-  margin-right: auto;
-}
+  margin-right: auto; }
 
 .itemize > div > .description {
-  margin-left: 0;
-}
+  margin-left: 0; }
+
+.leftLine {
+  border-left: 2px solid #46608b;
+  padding-left: 2px; }
+
+/*# sourceMappingURL=resume.css.map */
