--- a/resume.css
+++ b/resume.css
@@ -129,4 +129,36 @@ h3 {
   border-left: 2px solid #46608b;
   padding-left: 2px; }
 
+.topLanguage {
+  vertical-align: bottom;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  box-sizing: content-box;
+  width: 120px;
+  height: 120px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 5px; }
+  .topLanguage img {
+    max-width: 100px;
+    max-height: 100px;
+    display: inline-block; }
+  .topLanguage .deets {
+    vertical-align: bottom;
+    flex-grow: 9; }
+
+.topLanguage.ocaml {
+  background-color: #6e9fd7; }
+
+.topLanguage.c {
+  background-color: #c1b3a4; }
+
+.topLanguage.java {
+  background-color: #b399bf; }
+
+.topLanguage.go {
+  background-color: #d48076; }
+
 /*# sourceMappingURL=resume.css.map */
