--- a/_resume-lib.scss
+++ b/_resume-lib.scss
@@ -1,69 +1,82 @@
-/* colour scheme selected by following https://tallys.github.io/color-theory/ */
 body {
-  color: #001a00;
-  font-family: Verdana, sans-serif;
+  color: $black;
+  font-family: /*AndaleMono, "Andale Mono", Andale Mono,*/ Verdana, sans-serif;
   margin-left: 2.5in;
   margin-right: 2.5in;
   opacity: 1;
-  background-color: #fffaff;
+  background-color: $white;
   letter-spacing: 0.225px;
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 * {
-  list-style: none; }
+  list-style: none;
+}
 
 h1, h2, h3, h4, h5, h6, ul {
   margin-top: 0.1em;
-  margin-bottom: 0.25em; }
+  margin-bottom: 0.25em;
+}
 
 h3 {
-  font-weight: 125; }
+  font-weight: 125;
+}
 
 .showOnPrint {
-  display: none; }
+  display: none;
+}
 
 #header_container {
   margin-bottom: 1.5em;
-  text-align: center; }
+  text-align: center;
+}
 
 #header_container > .name {
   margin-bottom: 1px;
   margin-top: 6px;
-  font-size: 2.5em; }
+  font-size: 2.5em;
+}
 
 #header_container > .name > span {
   padding-left: 2px;
-  padding-right: 2px; }
+  padding-right: 2px;
+}
 
 #header_container > .name .given {
-  color: #001a00;
-  border-right: solid 1px #001a00; }
+  color: $black;
+  border-right: solid 1px $black;
+}
 
 #header_container .name .family {
-  color: #001a00; }
+  color: $black;
+}
 
 #header_container .contact_details {
   font-size: 1.1em;
-  padding-bottom: 7px; }
+  padding-bottom: 7px;
+}
 
 #header_container .contact_details span {
   display: inline-block;
   padding-left: 2px;
-  padding-right: 2px; }
+  padding-right: 2px;
+}
 
 .resume-section {
-  padding-bottom: 12px; }
+  padding-bottom: 12px;
+}
 
 .resume-section > *:nth-child(1) {
   font-size: 1.50em;
   margin: 0;
   padding: 0;
   margin-bottom: 3px;
-  border-bottom: solid 4px #46568b; }
+  border-bottom: solid 4px darken(mix-neutral($harmonious-first), 9%);
+}
 
 .sectionIcon {
-  color: #ffc400;
-  background-color: #4d5f99;
+  color: $second-color;
+  background-color: darken(mix-neutral($harmonious-first), 5%);
   line-height: 100%;
   height: 1.25em;
   width: 1.25em;
@@ -72,11 +85,12 @@ h3 {
   padding-bottom: 0;
   vertical-align: middle;
   text-align: center;
-  border: 2px solid #4d5f99; }
+  border: 2px solid darken(mix-neutral($harmonious-first), 5%);
+}
 
 .descriptionIcon {
   font-weight: bolder;
-  color: #4d5f99;
+  color: darken(mix-neutral($harmonious-first), 5%);
   line-height: 100%;
   height: 1.125em;
   font-size: 1.125em;
@@ -84,10 +98,12 @@ h3 {
   padding: 0;
   margin: 0;
   vertical-align: middle;
-  text-align: center; }
+  text-align: center;
+}
 
 .resume-section > * {
-  margin-left: 2.375em; }
+  margin-left: 2.375em;
+}
 
 /*.resume-section > *:nth-child(1n+2) * {
   margin-top: 2px;
@@ -96,71 +112,86 @@ h3 {
     margin-bottom: 1px;
   }
 }*/
+
 .itemize > div {
   padding-bottom: 5px;
-  margin-bottom: 7px; }
+  margin-bottom: 7px;
+}
 
 .itemize > div > div:nth-child(1) {
   font-size: 1.2em;
   font-weight: bold;
   /*display: flex;
   flex-wrap: wrap;*/
-  vertical-align: middle; }
+  vertical-align: middle;
+}
 
 .itemize > div > div:nth-child(1) > *:nth-child(1) {
-  margin-right: 0.05in; }
+  margin-right: 0.05in;
+}
 
 .itemize > div > ul {
   padding-left: 0;
-  margin-bottom: 3px; }
+  margin-bottom: 3px;
+}
 
 .itemize > div > ul > li {
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+}
 
 .itemize > div > ul > li *:first-child {
   font-size: 1.025em;
-  margin-bottom: 3px; }
+  margin-bottom: 3px;
+}
 
 .itemize > div table {
-  border-collapse: collapse; }
+  border-collapse: collapse;
+}
 
 .itemize div table th {
   text-align: left;
   font-size: 1.125em;
   vertical-align: middle;
   padding: 1px;
-  padding-right: 5px; }
+  padding-right: 5px;
+}
 
 .itemize div table td {
   text-align: right;
   vertical-align: middle;
-  padding: 1px; }
+  padding: 1px;
+}
 
 .itemize > div > div:nth-child(1) > .description {
   font-weight: lighter;
   font-style: oblique;
   font-size: 0.7em;
-  color: #4D4D4D; }
+  color: #4D4D4D;
+}
 
 .description {
-  display: block; }
+  display: block;
+}
 
 .itemize > div > div:nth-child(1) > .tools {
   font-weight: lighter;
   font-style: bold;
   font-size: 0.7em;
   color: #4D4D4D;
-  margin-right: auto; }
+  margin-right: auto;
+}
 
 .itemize > div > .description {
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 .leftLine {
   border-top: none;
   border-bottom: none;
-  border-left: 2px solid #46568b;
+  border-left: 2px solid darken(mix-neutral($harmonious-first), 9%);
   padding-left: 4px;
-  margin-bottom: 4px; }
+  margin-bottom: 4px;
+}
 
 .topLanguage {
   vertical-align: bottom;
@@ -172,42 +203,53 @@ h3 {
   width: 120px;
   text-align: center;
   padding: 5px;
-  margin: 10px;
-  margin-left: 0; }
-  .topLanguage img {
+  $margin: 10px;
+  margin: $margin;
+  margin-left: 0;
+  img {
     max-width: 100px;
     max-height: 100px;
-    display: inline-block; }
-  .topLanguage .deets {
+    display: inline-block;
+  }
+  .deets {
     vertical-align: bottom;
-    flex-grow: 9; }
+    flex-grow: 9;
+  }
+}
 
 .topLanguage.ocaml {
-  background-color: #cadcf0; }
+  background-color: lighten(mix-neutral(complement(rgb(245, 144, 29))), 33%);
+}
 
 .topLanguage.js {
-  background-color: #ddd3e9; }
+  background-color: lighten(mix-neutral(complement(rgb(140, 200, 75))), 33%);
+}
 
 .topLanguage.c {
-  background-color: #e6e1da; }
+  background-color: lighten(mix-neutral(complement(rgb(169, 185, 203))), 15%);
+}
 
 .topLanguage.java {
-  background-color: #e2d8e6; }
+  background-color: lighten(mix-neutral(complement(rgb(83, 130, 61))), 50%);
+}
 
 .topLanguage.go {
-  background-color: #edccc8; }
+  background-color: lighten(mix-neutral(complement(rgb(106, 215, 229))), 20%);
+}
 
 .topLanguage.cpp {
-  background-color: #f6d7bf; }
+  background-color: lighten(mix-neutral(complement(rgb(0, 88, 156))), 55%);
+}
 
-.softTable * {
-  font-size: 1.05em;
-  display: list-item;
-  text-align: left;
-  padding: 3px;
-  padding-left: 0;
-  padding-right: 10px;
-  margin-left: 1em;
-  list-style: disc; }
-
-/*# sourceMappingURL=resume.css.map */
+.softTable {
+  * {
+    font-size: 1.05em;
+    display: list-item;
+    text-align: left;
+    padding: 3px;
+    padding-left: 0;
+    padding-right: 10px;
+    margin-left: 1em;
+    list-style: disc;
+  }
+}
