--- a/resume.scss
+++ b/resume.scss
@@ -1,289 +1,5 @@
-/* colour scheme selected by following https://tallys.github.io/color-theory/ */
+$first-color: hsl(226, 100%, 50%);
 
-$red:    hsl(355, 100%, 50%);
-$orange: hsl(20, 100%, 50%);
-$yellow: hsl(60, 100%, 50%);
-$green:  hsl(120, 100%, 50%);
-$cyan:   hsl(180, 100%, 50%);
-$blue:   hsl(240, 100%, 50%);
-$violet: hsl(300, 100%, 50%);
+@import "_color-scheme.scss";
 
-$first-color: hsl(218, 100%, 50%);
-
-$second-color: complement($first-color);
-
-
-// Check if the color is a cool color
-@function is-cool-color($color) {
-        @return hue($color) < 300 and hue($color) > 120;
-}
-
-// Check if the color is high value or low value
-
-@function is-high-key-value($color) {
-        @return hue($color) > 30 and hue($color) < 140;
-}
-
-//Establish a relationship (similar lighting conditions) between colors.
-
-@function harmonious-mix($mix, $base) {
-        @if (is-cool-color($mix)){
-                @if is-high-key-value($base) {
-                        @return mix($mix, $base, 11%);
-                }
-                @else {
-                        @return mix($mix, $base, 16%);
-                }
-        }
-        @else {
-                @if is-high-key-value($base) {
-                        @return mix($mix, $base, 13%);
-                }
-                @else {
-                        @return mix($mix, $base, 23%);
-                }
-        }
-}
-
-$harmonious-first: harmonious-mix($second-color, $first-color);
-$harmonious-second: harmonious-mix($first-color, $second-color);
-
-@function mix-neutral($color) {
-        @if (is-highest-key-value($color)) {
-                @if is-high-key-value(complement($color)) {
-                        @return mix(complement($color), $color, 19%);
-                }
-                @else {
-                        @return mix(complement($color), $color, 13%);
-                }
-        }
-        @else if (is-high-key-value($color)) {
-                @if is-high-key-value(complement($color)) {
-                        @return mix(complement($color), $color, 31%);
-                }
-                @else {
-                        @return mix(complement($color), $color, 23%);
-                }
-        }
-        @else {
-                @if is-highest-key-value(complement($color)) {
-                        @return mix(complement($color), $color, 31%);
-                }
-                @if is-high-key-value(complement($color)) {
-                        @return mix(complement($color), $color, 26%);
-                }
-                @else {
-                        @return mix(complement($color), $color, 23%);
-                }
-        }
-}
-
-$black: hsl(120, 100%, 5%);
-$white: hsl(300, 100%, 99%);
-
-body {
-  font-family: /*AndaleMono, "Andale Mono", Andale Mono,*/ Verdana, sans-serif;
-  margin-left: 2.5in;
-  margin-right: 2.5in;
-  opacity: 1;
-  background-color: $white;
-  letter-spacing: 0.25px;
-}
-
-* {
-  list-style: none;
-}
-
-h3 {
-  font-weight: 125;
-}
-
-#header_container {
-  text-align: center;
-}
-
-#header_container > .name {
-  margin-bottom: 1px;
-  margin-top: 6px;
-  font-size: 2.5em;
-}
-
-#header_container > .name > span {
-  padding-left: 7px;
-  padding-right: 7px;
-}
-
-#header_container > .name .given {
-  color: $black;
-  border-right: solid 1px $black;
-}
-
-#header_container .name .family {
-  color: $black;
-}
-
-#header_container .contact_details {
-  font-size: 1.1em;
-  padding-bottom: 7px;
-}
-
-#header_container .contact_details span {
-  padding-left: 9px;
-  padding-right: 9px;
-}
-
-.resume-section {
-  padding-bottom: 8px;
-}
-
-.resume-section > *:nth-child(1) {
-  font-size: 1.50em;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 3px;
-  border-bottom: solid 4px darken(mix-neutral($harmonious-first), 9%);
-  column-count: 2;
-}
-
-.sectionIcon {
-  color: $harmonious-second;
-  background-color: darken(mix-neutral($harmonious-first), 9%);
-  line-height: 100%;
-  height: 1.25em;
-  width: 1.25em;
-  padding: 5px;
-  padding-bottom: 0;
-  vertical-align: middle;
-  text-align: center;
-  border: 2px solid darken(mix-neutral($harmonious-first), 9%);
-}
-
-.resume-section > *:nth-child(1n+2) * /*, .resume-section .itemize > div */ {
-  margin-top: 1px;
-  margin-bottom: 3px;
-  margin-left: 0px;
-  * {
-    margin-bottom: 1px;
-  }
-}
-
-.itemize > div {
-  padding-bottom: 5px;
-}
-
-.itemize > div > div:nth-child(1) {
-  font-size: 1.2em;
-  font-weight: bold;
-  /*display: flex;
-  flex-wrap: wrap;*/
-  vertical-align: middle;
-}
-
-.itemize > div > div:nth-child(1) > *:nth-child(1) {
-  margin-right: 0.2in;
-}
-
-.itemize > div > ul {
-  padding-left: 0;
-}
-
-.itemize > div > ul > li *:first-child {
-  font-size: 1.025em;
-}
-
-.itemize > div table {
-  border-collapse: collapse;
-}
-
-.itemize div table th {
-  text-align: left;
-  font-size: 1.125em;
-  vertical-align: middle;
-  padding: 1px;
-  padding-right: 5px;
-}
-
-.itemize div table td {
-  text-align: right;
-  vertical-align: middle;
-  padding: 1px;
-}
-
-.itemize > div > *:nth-last-child(1) {
-  margin-left: 0;
-  margin-bottom: 1px;
-}
-
-.itemize > div > div:nth-child(1) > .description {
-  font-weight: lighter;
-  font-style: oblique;
-  font-size: 0.7em;
-  color: #4D4D4D;
-  margin-right: auto;
-  display: inline;
-}
-
-.itemize > div > div:nth-child(1) > .tools {
-  font-weight: lighter;
-  font-style: bold;
-  font-size: 0.7em;
-  color: #4D4D4D;
-  margin-right: auto;
-}
-
-.itemize > div > .description {
-  margin-left: 0;
-}
-
-.leftLine {
-  border-top: none;
-  border-bottom: none;
-  border-left: 2px solid darken(mix-neutral($harmonious-first), 9%);
-  padding-left: 2px;
-}
-
-.topLanguage {
-  vertical-align: bottom;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  top: 0;
-  box-sizing: content-box;
-  width: 120px;
-  text-align: center;
-  border-radius: 10px;
-  padding: 5px;
-  img {
-    max-width: 100px;
-    max-height: 100px;
-    display: inline-block;
-  }
-  .deets {
-    vertical-align: bottom;
-    flex-grow: 9;
-  }
-}
-
-.topLanguage.ocaml {
-  background-color: lighten(mix-neutral(complement(rgb(245, 144, 29))), 33%);
-}
-
-.topLanguage.js {
-  background-color: lighten(mix-neutral(complement(rgb(140, 200, 75))), 33%);
-}
-
-.topLanguage.c {
-  background-color: lighten(mix-neutral(complement(rgb(169, 185, 203))), 15%);
-}
-
-.topLanguage.java {
-  background-color: lighten(mix-neutral(complement(rgb(83, 130, 61))), 50%);
-}
-
-.topLanguage.go {
-  background-color: lighten(mix-neutral(complement(rgb(106, 215, 229))), 20%);
-}
-
-.topLanguage.cpp {
-  background-color: lighten(mix-neutral(complement(rgb(0, 88, 156))), 55%);
-}
+@import "_resume-lib.scss";
