--- a/_resume-lib.scss
+++ b/_resume-lib.scss
@@ -3,6 +3,18 @@ body {
   font-family: /*AndaleMono, "Andale Mono", Andale Mono,*/ Verdana, sans-serif;
   margin-left: 2.5in;
   margin-right: 2.5in;
+  @media(max-width: 1920) {
+    margin-left: 2in;
+    margin-right: 2in;
+  }
+  @media(max-width: 1000px) {
+    margin-left: 1in;
+    margin-right: 1in;
+  }
+  @media(max-width: 500px) {
+    margin-left: 0.5in;
+    margin-right: 0.5in;
+  }
   opacity: 1;
   background-color: $white;
   letter-spacing: 0.225px;
