--- a/resume-print.scss
+++ b/resume-print.scss
@@ -13,6 +13,25 @@ body {
   margin-right: 0;
 }
 
+#header_container {
+  display: flex;
+  text-align: left;
+  .name {
+    display: inline;
+  }
+  .contact_details {
+    font-size: 0.875em;
+    padding-top: 10px;
+    span {
+      display: block;
+      float: left;
+      flex: 1;
+      width: 45%;
+      margin: 0;
+    }
+  }
+}
+
 a {
   text-decoration: none;
   color: $black;
