--- a/resume-print.css
+++ b/resume-print.css
@@ -230,17 +230,18 @@ body {
 
 #header_container {
   display: flex;
-  text-align: left; }
+  text-align: left;
+  padding-left: 1em; }
   #header_container .name {
     display: inline; }
   #header_container .contact_details {
-    font-size: 0.875em;
+    font-size: 0.87em;
     padding-top: 10px; }
     #header_container .contact_details span {
       display: block;
       float: left;
       flex: 1;
-      width: 45%;
+      width: 49%;
       margin: 0; }
 
 a {
