--- a/resume-print.scss
+++ b/resume-print.scss
@@ -16,17 +16,18 @@ body {
 #header_container {
   display: flex;
   text-align: left;
+  padding-left: 1em;
   .name {
     display: inline;
   }
   .contact_details {
-    font-size: 0.875em;
+    font-size: 0.87em;
     padding-top: 10px;
     span {
       display: block;
       float: left;
       flex: 1;
-      width: 45%;
+      width: 49%;
       margin: 0;
     }
   }
