--- a/resume.css
+++ b/resume.css
@@ -29,7 +29,11 @@ h1, h2, h3, h4, h5, h6, ul {
   margin-bottom: 0.25em; }
 
 h3 {
-  font-weight: 125; }
+  font-weight: 600;
+  font-size: 1.05em; }
+
+h4 {
+  font-weight: 100; }
 
 .showOnPrint {
   display: none; }
@@ -67,7 +71,7 @@ h3 {
   padding-bottom: 12px; }
 
 .resume-section > *:nth-child(1) {
-  font-size: 1.50em;
+  font-size: 1.125em;
   margin: 0;
   padding: 0;
   margin-bottom: 3px;
@@ -77,9 +81,10 @@ h3 {
   color: #ffc400;
   background-color: #4d5f99;
   line-height: 100%;
-  height: 1.25em;
-  width: 1.25em;
+  height: 1.1em;
+  width: 1.1em;
   padding: 5px;
+  padding-right: 6px;
   margin: 0;
   padding-bottom: 0;
   vertical-align: middle;
@@ -99,7 +104,7 @@ h3 {
   text-align: center; }
 
 .resume-section > * {
-  margin-left: 2.375em; }
+  margin-left: 1.75em; }
 
 /*.resume-section > *:nth-child(1n+2) * {
   margin-top: 2px;
@@ -110,11 +115,10 @@ h3 {
 }*/
 .itemize > div {
   padding-bottom: 5px;
-  margin-bottom: 7px; }
+  margin-bottom: 10px; }
 
 .itemize > div > div:nth-child(1) {
-  font-size: 1.2em;
-  font-weight: bold;
+  font-size: 1.075em;
   /*display: flex;
   flex-wrap: wrap;*/
   vertical-align: middle; }
@@ -148,18 +152,20 @@ h3 {
   vertical-align: middle;
   padding: 1px; }
 
+.description {
+  font-weight: lighter;
+  font-style: oblique;
+  font-size: 0.7em;
+  color: #4D4D4D; }
+
 .itemize > div > div:nth-child(1) > .description {
   font-weight: lighter;
   font-style: oblique;
   font-size: 0.7em;
   color: #4D4D4D; }
 
-.description {
-  display: block; }
-
 .itemize > div > div:nth-child(1) > .tools {
   font-weight: lighter;
-  font-style: bold;
   font-size: 0.7em;
   color: #4D4D4D;
   margin-right: auto; }
